--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                         интересные места, достойные вашего отпуска.
                     </p>
                     <ul class="intro__list">
-                        <li><span class="intro__list intro__list_accent">Часовых поясов</span> 11</li>
-                        <li><span class="intro__list intro__list_accent">Объектов природного наследия ЮНЕСКО</span> 12
+                        <li><span class="intro__list intro__list_listbold">Часовых поясов</span> 11</li>
+                        <li><span class="intro__list intro__list_listbold">Объектов природного наследия ЮНЕСКО</span> 12
                         </li>
-                        <li><span class="intro__list intro__list_accent">Объектов культурного наследия ЮНЕСКО</span> 16
+                        <li><span class="intro__list intro__list_listbold">Объектов культурного наследия ЮНЕСКО</span> 16
                         </li>
-                        <li><span class="intro__list intro__list_accent">Природных заповедников</span> 105</li>
-                        <li><span class="intro__list intro__list_accent">Аэропортов</span> 241</li>
+                        <li><span class="intro__list intro__list_listbold">Природных заповедников</span> 105</li>
+                        <li><span class="intro__list intro__list_listbold">Аэропортов</span> 241</li>
                     </ul>
                 </div>
             </section>
