--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       <p class="lead__subtitle">
         Настоящая страна не в выпусках новостей, а здесь.
       </p>
+      <figure class="lead__figure">
       <img class="lead__image" src="./images/main.jpg" alt="Вид из окна поезда" />
-      <p class="lead__caption">ваша полка — верхняя</p>
+      <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+      </figure>
     </section>
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -38,11 +40,11 @@
         некоторые интересные места, достойные вашего отпуска.
       </p>
       <ul class="intro__list">
-        <li><span class="intro__span-accent">Часовых поясов</span> 11</li>
-        <li><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
-        <li><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-        <li><span class="intro__span-accent">Природных заповедников</span> 105</li>
-        <li><span class="intro__span-accent">Аэропортов</span> 241</li>
+        <li><span class="intro__accent">Часовых поясов</span> 11</li>
+        <li><span class="intro__accent">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li><span class="intro__accent">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li><span class="intro__accent">Природных заповедников</span> 105</li>
+        <li><span class="intro__accent">Аэропортов</span> 241</li>
       </ul>
     </section>
     <section class="grid">
